# misc-samples

./: .gitignore  OPENCODE_CONFIG_SESSION_SUMMARY.md  README.md  dxfviewer.py  enum_name.c  history-unix-like-GUI.md  opencode-bun-compatibility.md  retrive-jira.sh  vtk-orientedCylinder.py
.githooks/: pre-commit
Crossplatform/: FindFiles.cpp  compiler-version.cpp  js-floatpoint.html
Linux/: PKGBUILD  TODO.md  archlinux.installed.md  bash-dbus-debain-wsl.sh  bash-learning.txt  check-regex.sh  check-signature-kernel-module.sh  chromium-launch.sh  chromium-wayland.sh  compile-gcr-3-41.sh  count-file-dash.sh  daily-verse-bg.sh  electron-wayland.sh  entries-arch.conf  firefox-wayland.md  gcr-ssh-agent.service  github-credential-chromeos.sh  github-credential-helper-linux.sh  gnome-disable-x11.sh  gnome-enable-x11.sh  gnome-start-mutter.sh  gnome-start-shell.sh  gnome-start.sh  hextobin.sh  if-already-login-set-ssh-sock.sh  install-alternative-gcc.sh  install-nvm.md  kgame-repo.md  send-at-command.sh  setback-gnome.sh  shell-string-condition.sh  start-poky-qemuarm.sh  start-ssh-agent-automatic.sh  switch-gcc.sh  syms.h  vscode-wayland.sh  weston-xwayland.c  weston.ini  x11-extension.md
Linux/GUIapp/basicwin/: TODO.md  basicwin-jis.c  basicwin.c  glxgears.c  meson.build
Mac/: Hello.m  jhbuild-gtk-on-mac.md  jhbuildrc-custom  jhbuildrc.mac.patch  msedge.mobileconfig  objc4.webloc  uname.c
Windows/: CmdExt.bat  atlstr.h  cmlind.cmd  git-editor-codium.bat  gitver.bat  msvc-bash-detect.py  msvc-detect.py  (+5 more)
Windows/cairo-sample/: CMakeLists.txt  build.ps1  main.c
(+151 files in other folders)
